image stretching fix

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -133,7 +133,7 @@ body {
 
 .card-image {
     width: 80%;
-    height: 22vh;
+    height: auto;
     position: relative; /* or absolute if necessary */
     left: 50%;
     top: 1.5vh;
